[FEAT] ChallengePreviewDTO 구현